--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,11 +43,21 @@
 }
 
 html {
-  height: 100%;
-  overflow-x: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  font-weight: 400;
 }
 
-body {
+/**
+ * Firefox specific rule
+ */
+@-moz-document url-prefix() {
+  body {
+    font-weight: lighter !important;
+  }
+}
+html, body {
   overflow-x: hidden;
 }
 
@@ -84,7 +94,7 @@ body {
     padding: 20px;
   }
 }
-@media screen and (min-width: 430px) {
+@media screen and (min-width: 480px) {
   .main__container {
     padding: 40px;
   }
@@ -157,7 +167,7 @@ h1 {
 }
 h1.title {
   font-size: 60px;
-  font-weight: 700;
+  font-weight: 500;
   font-family: "MuseoSansCyrl-900", sans-serif;
   line-height: 72px;
 }
@@ -183,7 +193,7 @@ h2 {
 h2.title {
   padding-bottom: 32px;
   font-size: 40px;
-  font-weight: 600;
+  font-weight: 500;
   font-family: "MuseoSansCyrl-700", sans-serif;
   line-height: 48px;
   text-align: center;
@@ -226,7 +236,7 @@ h5 {
 }
 h5.subtitle {
   font-size: 15px;
-  font-weight: 700;
+  font-weight: 400;
   font-family: "MuseoSansCyrl-700", sans-serif;
   line-height: 18px;
 }
@@ -250,7 +260,7 @@ h5.subtitle {
 .support-is-here__wrap {
   padding: 40px 15px 54px;
 }
-@media screen and (max-width: 390px) {
+@media screen and (max-width: 402px) {
   .support-is-here__wrap {
     padding-top: 20px;
     padding-bottom: 30px;
@@ -274,7 +284,7 @@ h5.subtitle {
 .support-is-here__btn-group {
   text-align: center;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 780px) {
   .support-is-here__btn-group {
     width: 100%;
     max-width: 400px;
@@ -294,7 +304,7 @@ h5.subtitle {
   border-radius: 12px;
   background-color: #fff;
   font-size: 15px;
-  font-weight: 600;
+  font-weight: 400;
   font-family: "MuseoSansCyrl-700", sans-serif;
   line-height: 18px;
   text-align: center;
@@ -304,31 +314,42 @@ h5.subtitle {
   margin-right: 8px;
   vertical-align: middle;
 }
+.support-is-here__btn-group button svg.online-chat, .support-is-here__btn-group a svg.online-chat {
+  margin-top: -3px;
+}
 .support-is-here__btn-group button svg.phone, .support-is-here__btn-group a svg.phone {
+  margin-top: 1px;
+  margin-left: -1px;
+  vertical-align: top;
+}
+.support-is-here__btn-group button svg.star, .support-is-here__btn-group a svg.star {
+  margin-top: 1px;
+  margin-right: 9px;
   vertical-align: top;
 }
 .support-is-here__btn {
   display: inline-block;
   width: 100%;
   max-width: 160px;
+  vertical-align: middle;
 }
-@media screen and (max-width: 390px) {
+@media screen and (max-width: 402px) {
   .support-is-here__btn {
     max-width: 100%;
   }
 }
-@media screen and (min-width: 390.98px) {
+@media screen and (min-width: 402.98px) {
   .support-is-here__btn {
     margin-right: 2px;
     margin-left: 2px;
   }
 }
-@media screen and (max-width: 390px) {
+@media screen and (max-width: 402px) {
   .support-is-here__btn:nth-child(n+2) {
     padding-top: 8px;
   }
 }
-@media screen and (max-width: 790px) {
+@media screen and (max-width: 780px) {
   .support-is-here__btn:nth-child(n+3) {
     padding-top: 8px;
   }
@@ -613,7 +634,7 @@ h5.subtitle {
   padding-bottom: 8px;
   font-size: 20px;
   font-family: "MuseoSansCyrl-700", sans-serif;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 24px;
   vertical-align: top;
 }
@@ -768,7 +789,7 @@ h5.subtitle {
 .reference__btn__title {
   font-size: 20px;
   font-family: "MuseoSansCyrl-700", sans-serif;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 24px;
 }
 .reference__content {
@@ -803,7 +824,7 @@ h5.subtitle {
   padding-bottom: 16px;
   font-size: 18px;
   font-family: "MuseoSansCyrl-900", sans-serif;
-  font-weight: 700;
+  font-weight: 500;
   line-height: 28.8px;
 }
 @media screen and (min-width: 360px) {
@@ -825,7 +846,7 @@ h5.subtitle {
   font-family: "MuseoSansCyrl-500", sans-serif;
   font-size: 12px;
   font-weight: 400;
-  line-height: 21px;
+  line-height: 21.02px;
   text-align: left;
 }
 @media screen and (min-width: 380px) {
@@ -837,7 +858,7 @@ h5.subtitle {
   margin: 0 0 17px;
   font-family: "MuseoSansCyrl-700", sans-serif;
   font-size: 12px;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 15.6px;
 }
 @media screen and (min-width: 380px) {
@@ -854,8 +875,8 @@ h5.subtitle {
   border-radius: 12px;
   background-color: #F9F9F9;
   font-size: 15px;
-  font-weight: 600;
   font-family: "MuseoSansCyrl-700", sans-serif;
+  font-weight: 500;
   line-height: 18px;
   text-align: center;
   vertical-align: middle;
@@ -863,10 +884,6 @@ h5.subtitle {
 }
 .where-does-the-delivery-work__btn-group button svg, .where-does-the-delivery-work__btn-group a svg {
   vertical-align: middle;
-}
-.where-does-the-delivery-work__btn-group button svg.online-chat-white, .where-does-the-delivery-work__btn-group a svg.online-chat-white {
-  vertical-align: middle;
-  margin-top: -4px;
 }
 .where-does-the-delivery-work__btn-group a svg {
   position: absolute;
@@ -904,7 +921,12 @@ h5.subtitle {
 .where-does-the-delivery-work__btn-group .item_green button {
   background-color: #36BA5F;
 }
-.where-does-the-delivery-work__btn-group .item_green button svg {
-  margin-right: 8px;
+.where-does-the-delivery-work__btn-group .item_green button svg.online-chat-white {
+  vertical-align: middle;
+  margin-top: -2px;
+  margin-right: 9px;
+}
+.where-does-the-delivery-work__btn-group .item_green button span {
+  padding-right: 2px;
 }
 /*# sourceMappingURL=../css/style.css.map */
